feat(auth): implement login and register endpoints

--- a/.env.sample
+++ b/.env.sample
@@ -21,3 +21,6 @@ ACCESS_TOKEN_EXPIRY=
 REFRESH_TOKEN_SECRET=
 # REFRESH_TOKEN_EXPIRY: The expiration time for refresh tokens in seconds.
 REFRESH_TOKEN_EXPIRY=
+
+# MAILGUN_API_KEY: Get API key from mailgun for mail service.
+MAILGUN_API_KEY=
