--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
 	"name": "auth-service",
 	"version": "1.0.0",
 	"description": "a simple auth-service made by node.js, express.js, postgres, prisma",
-	"main": "./src/index.js",
+	"main": "./dist/index.js",
 	"type": "module",
 	"scripts": {
 		"build": "tsc",
-		"start": "node dist/index.js"
+		"start": "node dist/index.js",
+		"postbuild": "node ./scripts/js-extensions.scripts.js",
+		"watch": "tsc --watch",
+		"dev": "concurrently \"npm run watch\" \"nodemon dist/index.js\" --delay 1"
 	},
 	"author": "jayash saini",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/bcryptjs": "^2.4.6",
 		"@types/cookie-parser": "^1.4.8",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^5.0.0",
@@ -26,13 +30,17 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^6.2.1",
+		"bcryptjs": "^2.4.3",
+		"concurrently": "^9.1.2",
 		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.7",
 		"express": "^4.21.2",
 		"express-rate-limit": "^7.5.0",
 		"jsonwebtoken": "^9.0.2",
+		"mailgun.js": "^11.1.0",
 		"morgan": "^1.10.0",
+		"nodemon": "^3.1.9",
 		"request-ip": "^3.3.0",
 		"ts-node-dev": "^2.0.0",
 		"winston": "^3.17.0",
