--- a/.env.sample
+++ b/.env.sample
@@ -3,6 +3,9 @@
 # PORT: The port number on which the auth-service will listen for incoming requests.
 PORT=8000
 
+# HOST: The host address on which the auth-service will listen for incoming requests.
+HOST=0.0.0.0;
+
 # NODE_ENV: The environment in which the auth-service is running (e.g., development, production).
 NODE_ENV=
 
