api(user): implement twoFactorAuthHandler, twoFactorAuthHandler, refreshAccessTokenHandler, logoutHandler, deleteAccountHandler endpoints

--- a/.gitignore
+++ b/.gitignore
@@ -17,10 +17,7 @@ logs/
 
 # Environment files
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.production
 
 # OS-specific files
 .DS_Store
