config(env): update env configuration for prod and dev

--- a/.env.sample
+++ b/.env.sample
@@ -4,10 +4,10 @@
 PORT=8000
 
 # HOST: The host address on which the auth-service will listen for incoming requests.
-HOST=0.0.0.0;
+HOST=127.0.0.1
 
 # NODE_ENV: The environment in which the auth-service is running (e.g., development, production).
-NODE_ENV=
+NODE_ENV=development
 
 # DATABASE_URL: The connection string for the database used by the auth-service.
 DATABASE_URL=
