--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 		"@types/morgan": "^1.9.9",
 		"@types/node": "^22.10.5",
 		"@types/request-ip": "^0.0.41",
+		"@types/swagger-jsdoc": "^6.0.4",
+		"@types/swagger-ui-express": "^4.1.7",
 		"prisma": "^6.2.1",
 		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
@@ -42,7 +44,10 @@
 		"morgan": "^1.10.0",
 		"nodemon": "^3.1.9",
 		"request-ip": "^3.3.0",
+		"swagger-jsdoc": "^6.2.8",
+		"swagger-ui-express": "^5.0.1",
 		"ts-node-dev": "^2.0.0",
+		"ua-parser-js": "^2.0.0",
 		"winston": "^3.17.0",
 		"zod": "^3.24.1"
 	}
