feat(kafka): implement kafka config and orgnaised env var

--- a/.env.sample
+++ b/.env.sample
@@ -27,3 +27,8 @@ REFRESH_TOKEN_EXPIRY=
 
 # MAILGUN_API_KEY: Get API key from mailgun for mail service.
 MAILGUN_API_KEY=
+
+# KAFKA CONFIGURATION:
+KAFKA_CLIENT_ID=
+KAFKA_BROKERS=
+KAFKA_GROUP_ID=
