--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"express": "^4.21.2",
 		"express-rate-limit": "^7.5.0",
 		"jsonwebtoken": "^9.0.2",
+		"kafkajs": "^2.2.4",
 		"mailgun.js": "^11.1.0",
 		"morgan": "^1.10.0",
 		"nodemon": "^3.1.9",
