feat(session): implement user session management

--- a/.env.sample
+++ b/.env.sample
@@ -25,6 +25,12 @@ REFRESH_TOKEN_SECRET=
 # REFRESH_TOKEN_EXPIRY: The expiration time for refresh tokens in seconds.
 REFRESH_TOKEN_EXPIRY=
 
+# Email Verification token expiration time in minutes.
+EMAIL_VERIFICATION_TOKEN_EXPIRY=
+
+# Password reset and change password expiry time in minutes.
+PASSWORD_TOKEN_EXPIRY=
+
 # MAILGUN_API_KEY: Get API key from mailgun for mail service.
 MAILGUN_API_KEY=
 
