--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
 	"type": "module",
 	"scripts": {
 		"build": "tsc",
-		"start": "NODE_ENV=production node dist/index.js",
+		"start": "cross-env NODE_ENV=production node dist/index.js",
 		"postbuild": "node ./scripts/js-extensions.scripts.js",
-		"watch": "NODE_ENV=development tsc --watch",
-		"dev": "NODE_ENV=development concurrently \"npm run watch\" \"nodemon dist/index.js\" --delay 1",
+		"watch": "cross-env NODE_ENV=development tsc --watch",
+		"dev": "cross-env NODE_ENV=development concurrently \"npm run watch\" \"nodemon dist/index.js\" --delay 1",
 		"prisma:studio": "dotenv -e .env.development -- npx prisma studio",
 		"prisma:generate": "dotenv -e .env.development -- npx prisma generate",
 		"prisma:migrate": "dotenv -e .env.development -- npx prisma migrate deploy"
@@ -18,6 +18,7 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.6",
+		"@types/compression": "^1.7.5",
 		"@types/cookie-parser": "^1.4.8",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^5.0.0",
@@ -38,6 +39,7 @@
 	"dependencies": {
 		"@prisma/client": "^6.2.1",
 		"bcryptjs": "^2.4.3",
+		"compression": "^1.8.0",
 		"concurrently": "^9.1.2",
 		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
